--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-Hello World
+<html>
+    <body>
+        <script type="javascript/text">
+            alert("test");
+            location.href = "github.io"    
+        </script>
+    </body>
+</html>
