--- a/index.html
+++ b/index.html
@@ -1,8 +1,14 @@
-<html>
-    <body>
-        <script type="javascript/text">
-            alert("test");
-            location.href = "github.io"    
-        </script>
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    window.onload = function() {
+        alert("test");
+        location.href = "github.io"
+      };
+</body>
 </html>
