--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <title>Document</title>
 </head>
 <body>
+    <script>
     window.onload = function() {
         alert("test");
         location.href = "github.io"
       };
-
+    </script>
       test123
 </body>
 </html>
