--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script>
     window.onload = function() {
         alert("test");
-        location.href = "github.io"
+        location.href = "https://github.io"
       };
     </script>
       test123
