--- a/index.html
+++ b/index.html
@@ -15,11 +15,10 @@
         if (distance <= 0) {
             location.href = "https://forms.gle/8bZiHQGs5iW2N7bv5";
         } else {
-            alert("신청은 몇시부터 시작합니다.");
+            alert("신청은 12시10분부터 가능합니다.");
             window.close()
         }
       };
     </script>
-      test123
 </body>
 </html>
